# nekvorepo

./: .gitattributes  .gitignore  README.md  docker-compose.yml
.github/workflows/: terraform-deploy.yml  terraform.yml
frontend/: package-lock.json  package.json
services/identity-service/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
services/identity-service/app/: main.py
services/shared/: constants.py
services/shared/models/: identity.py  workflow.py
services/shared/schemas/: auth.py  repo.py
shared/models/: repo_head.py  user_repo_link.py
terraform/: backend.tf  bastion.tf  cognito.tf  iam.tf  outputs.tf  rds.tf  security-groups.tf  variables.tf  vpc.tf
