[project]
name = "identity-service"
version = "0.1.0"
description = "Microservice for user authentication and authorization"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.0.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.1.0",  # Required for RDS PostgreSQL
    "boto3>=1.34.0",           # Required for Cognito/S3
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[tool.uv]
managed = true